SSNC-10365: Rewrite README, add CONTRIBUTING and CHANGELOG
- README: full quick-start, configuration tables for fields/properties,
  examples for SPI custom providers, header forwarding, body masking,
  visibility toggles, tracing, compatibility matrix
- CONTRIBUTING: dev setup, conventions, "no Tinkoff defaults in core"
- CHANGELOG: pre-release note covering Phases 1-5